Atualziando informacoes das models e inserindo banco de dados

--- a/AppMvcBasico/appsettings.json
+++ b/AppMvcBasico/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AppMvcBasico-71B7450C-78F4-4CDD-888A-B27FE10CA6A2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ITALO-GAMMER;Database=AspMvcBasico;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
